--- a/NewSite/Work/mcmasterTA/index.html
+++ b/NewSite/Work/mcmasterTA/index.html
@@ -69,18 +69,22 @@
 		    	<div id="ksa">
 					<h2>Knowledge, Skills and Abillities</h2>
 					<ul>
-						<li></li>
-						<li></li>
-						<li></li>
-						<li></li>
-						<li></li>
-						<li></li>
+						<li>Communication</li>
+						<li>Organization</li>
+						<li>FPGA Programming</li>
+						<li>C++</li>
+						<li>Java</li>
+						<li>Control Syatems</li>
+						<li>Digital and analog logic</li>
 					</ul>
 				</div>
 				<div id="gsf">
 					<h2>Goals, Success Factors</h2>
 					<ul>
-						<li></li>
+						<li>Students Adiquately Understand the course material</li>
+						<li>Class develops an appreciation for the omportance of the course</li>
+						<li>Maintain integrity and remain as unbiased as possible</li>
+						<li>Maintain a fun atmosphere to foster learning</li>
 					</ul>
 				</div>
 		    </div>
@@ -94,7 +98,14 @@
 	</div>
 	<div name="" class="container" id="Reflection">
 		<h2>Reflection</h2>
-		<p></p>
+		<p>I absolutely loved teaching. It is a lot of fun to demonstrate
+		 new concepts and help challenge students to do their best. I have
+		  found that being a teaching assistant has helped me understand the
+		   concepts alot better as i need to be able to answer any questions.
+		    Instructional hours are amazing however, marking assignemtns and
+		     exams can be quite draining. It has helped me develop and eye for
+		      detail and catch major and minor errors in calculations. Being
+		       a teaching assistant has been an amazing learning experience for me.</p>
 	</div>
 	
 </body>
