--- a/NewSite/Work/torontostar/index.html
+++ b/NewSite/Work/torontostar/index.html
@@ -44,7 +44,7 @@
 		<div class="container">
 	    	<h2>Job Description</h2>
 			<ul>
-				<li></li>
+				<li>Responsible for selling newspaper subscriptions door to door</li>
 			</ul>
 		</div>
 	</div>
@@ -55,13 +55,15 @@
 		    	<div id="ksa">
 					<h2>Knowledge, Skills and Abillities</h2>
 					<ul>
-						<li></li>
+						<li>Sales</li>
+						<li>Communication</li>
+						<li>Organization</li>
 					</ul>
 				</div>
 				<div id="gsf">
 					<h2>Goals, Success Factors</h2>
 					<ul>
-						<li></li>
+						<li>Sell at least one new subscription a day</li>
 					</ul>
 				</div>
 		    </div>
@@ -75,7 +77,7 @@
 	</div>
 	<div name="" class="container" id="Reflection">
 		<h2>Reflection</h2>
-		<p></p>
+		<p>This was not an easy job to do. Going door to door trying to sell newspaper subscriptions was extremely tiring. This job really tested my sales skills and helped me become a lot more outgoing.</p>
 	</div>
 	
 </body>
