changed the style for some projects

--- a/NewSite/Projects/FormulaHybrid/index.html
+++ b/NewSite/Projects/FormulaHybrid/index.html
@@ -13,7 +13,7 @@
 	<meta name="description" content="Prakahr Garg's portfolio website">
 	<meta name="author" content="Prakhar Garg">
 	
-	<title>Prakhar Garg | About Me</title>
+	<title>Prakhar Garg | Formula Hybrid</title>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="http://prakhargarg.me/NewSite/assets/data/sitemap.js"></script>
@@ -32,10 +32,6 @@
 
 </head>
 
-
-
-
-
 <body onload=' addMenubar();'>
 	<div name="" class="container-fluid jumbotron" id="Intro">
 		<h1 id="jobtitle">Formula Hybrid</h1>
@@ -43,41 +39,65 @@
 		<p class="lead" id="company">McMaster University</p>
 		<div class="container">
 	    	<h2>Project Description</h2>
-			<p>The Formula Hybrid Competition takes place annually. It is regarded as the most complex and dynamic of the series of competitions hosted by the Society of Automotive Engineers for Collegiate Design. The purpose of the competition is to create the most efficient formula-style electric or plug-in hybrid race car. Each car competes in numerous events to evaluate performance and fuel efficiency. The competition emphasizes innovating new techniques to increase the performance of the vehicle.</p>
+			<p>The <a href="http://www.formula-hybrid.org/">Formula Hybrid Competition</a> takes place annually. It is regarded as the most complex and dynamic of the series of competitions hosted by the Society of Automotive Engineers for Collegiate Design. The purpose of the competition is to create the most efficient formula-style electric or plug-in hybrid race car. Each car competes in numerous events to evaluate performance and fuel efficiency. The competition emphasizes innovating new techniques to increase the performance of the vehicle.</li>
+			</p>
 		</div>
 	</div>
+
 	<div name="" class="container-fluid " id="Details">
 		<div class="container">
 		  <div class="row">
+		  	<div class="col-sm">
+		  		<h2>My Role</h2>
+		  		<p>As a part of the <a href="http://www.formulahybrid.ca/#">McMaster Formula Hybrid team,</a> I was able to work on the software, improving the performance of the car. I was responsible for working on the algorithm, to detect and correct for the wheel slipping during acceleration, and breaking events of the vehicle. This was an excellent way to apply my knowledge of filters and real-time systems from class. Filters were used to reduce noise in the system and help compensate for the sampling frequency that was limited by the speed of the CAN network of the vehicle. Unfortunately, time constraints didn't allow for the proper testing of the software and a decision was made to not include the code during the competition to ensure the driver's safety.</p>
+		  	</div>
+		  	<div class="col-sm">
+		  		<img width="100%" class="priority1 hiddenfalse" src="Project Formula Hybrid.jpg">
+		  	</div>
+		  </div>
+		  <div class="row">
+		    <div class="col-sm">
+				<img width="100%" class="priority1 hiddenfalse" src="11061189_825147770894631_8426436439548632526_n.jpg">
+				
+		    </div>
 		    <div class="col-sm">
 		    	<div id="ksa">
 					<h2>Knowledge, Skills and Abillities</h2>
 					<ul>
-						<li>Experience working with and troubleshooting technology.</li>
-						<li>Able to work with children</li>
-						<li>Good interpersonal skills</li>
-						<li>Excillent comunication and organisational skills</li>
+						<li>PCB Debugging</li>
+						<li>Low level Programming</li>
+						<li>C++</li>
+						<li>Soldering</li>
+						<li>Matlab/Simulink</li>
 					</ul>
 				</div>
 				<div id="gsf">
 					<h2>Goals, Success Factors</h2>
 					<ul>
-						<li>Ability to manage compeeting deadlines</li>
-						<li>Ensure sontinuous improvement and documentation of product</li>
+						<li>Develop a well performing Hybrid Vehicle</li>
+						<li>Understand the basics of developing a hybrid vehicle</li>
 					</ul>
 				</div>
 		    </div>
-		    <div class="col-sm-4">
-				<div  class="grid-container container" id="Images-grid-container">
-					<img class="priority1 hiddenfalse" src="Logo.gif">
-				</div>
-		    </div>
+		  </div>
+		  <div class="row">
+		  	<div class="col-sm">
+		  		<h2>Challenges</h2>
+		  		<ul>
+		  			<li>This project had a very steep learning curve</li>
+		  			<li>Very large multiyear project</li>
+		  		</ul>
+		  	</div>
+		  	<div class="col-sm">
+		  		<img width="100%" class="priority1 hiddenfalse" src="LaunchTractionControl.PNG">
+		  	</div>
+
 		  </div>
 		</div>
 	</div>
 	<div name="" class="container" id="Reflection">
 		<h2>Reflection</h2>
-		<p>I am responsible for assisting the IT Support staff with any necessary task. This usually involves repairing broken computers and printers, disposing of old machines, and assisting in upgrading machines at CAPREIT's regional sites. One of my biggest accomplishment this year was to be able take calls and actively help users over the phone. this was a great experience because it helped me enhance my communication skills. I became more comfortable talking to strangers and immediately helping them out.</p>
+		<p>This project taught me a lot about how larger teams needs to be organsied. Given the multiyear nature of the project, it was amazing to see how knowlege was transfered from year to year.</p>
 	</div>
 	
 </body>
