changes to work

--- a/NewSite/Work/ctw/index.html
+++ b/NewSite/Work/ctw/index.html
@@ -75,12 +75,10 @@
 				</div>
 		    </div>
 		    <div class="col-sm-4">
-				<div  class="grid-container container" id="Images-grid-container">
-					<img class="priority1 hiddenfalse" src="Logo.gif">
-				</div>
+				<img width="100%" class="priority1 hiddenfalse" src="Logo.gif">
 		    </div>
 		  </div>
-		</div>
+		</div> 
 	</div>
 	<div name="" class="container" id="Reflection">
 		<h2>Reflection</h2>
