--- a/NewSite/Work/mcmasterSPA/index.html
+++ b/NewSite/Work/mcmasterSPA/index.html
@@ -71,9 +71,7 @@
 				</div>
 		    </div>
 		    <div class="col-sm-4">
-				<div  class="grid-container container" id="Images-grid-container">
-					<img class="priority1 hiddenfalse" src="">
-				</div>
+				<img width=100% class="priority1 hiddenfalse" src="">
 		    </div>
 		  </div>
 		</div>
