--- a/NewSite/Work/gdms/index.html
+++ b/NewSite/Work/gdms/index.html
@@ -73,9 +73,7 @@
 				</div>
 		    </div>
 		    <div class="col-sm-4">
-				<div  class="grid-container container" id="Images-grid-container">
-					<img class="priority1 hiddenfalse" src="gdmslogo.jpg">
-				</div>
+				<img width="100%" class="priority1 hiddenfalse" src="gdmslogo.jpg">
 		    </div>
 		  </div>
 		</div>
