--- a/NewSite/Work/mcmasterTA/index.html
+++ b/NewSite/Work/mcmasterTA/index.html
@@ -89,9 +89,7 @@
 				</div>
 		    </div>
 		    <div class="col-sm-4">
-				<div  class="grid-container container" id="Images-grid-container">
-					<img class="priority1 hiddenfalse" src="">
-				</div>
+				<img width="100%" class="priority1 hiddenfalse" src="">
 		    </div>
 		  </div>
 		</div>
