--- a/NewSite/Work/thales/index.html
+++ b/NewSite/Work/thales/index.html
@@ -76,9 +76,7 @@
 				</div>
 		    </div>
 		    <div class="col-sm-4">
-				<div  class="grid-container container" id="Images-grid-container">
-					<img class="priority1 hiddenfalse" src="Logo.gif">
-				</div>
+					<img width="100%" class="priority1 hiddenfalse" src="Logo.gif">
 		    </div>
 		  </div>
 		</div>
