oldest project pages updated

--- a/Projects/Quadcopter/index.html
+++ b/Projects/Quadcopter/index.html
@@ -13,7 +13,7 @@
 	<meta name="description" content="Prakahr Garg's portfolio website">
 	<meta name="author" content="Prakhar Garg">
 	
-	<title>Prakhar Garg | F1</title>
+	<title>Prakhar Garg | Quadcopter</title>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="http://prakhargarg.me/NewSite/assets/data/sitemap.js"></script>
@@ -34,12 +34,11 @@
 
 <body onload=' addMenubar();'>
 	<div name="" class="container-fluid jumbotron" id="Intro">
-		<h1 id="jobtitle">F1 in Schools</h1>
-		<p class="lead float-right" id="date">2010-2012</p>
-		<p class="lead" id="company">Woburn C.I.</p>
+		<h1 id="jobtitle">Quadcopter</h1>
+		<p class="lead float-right" id="date">2014</p>
 		<div class="container">
 	    	<h2>Project Description</h2>
-			<p>This was the one of the most challenging competitions in terms of coordinating resources between team members. I was a part of the only collaboration team in the regional competition. This meant that students from different schools all collaborated to work as a single team. This posed a challenge as unlike most teams it was difficult for us to host regular meetings to communicate the team’s progress. This hurdle was overcome by dividing the work into 3 rolls. These were manufacturing, marketing and outreach. The team agreed to collaborate on the overall design of the F1 car as it was the most important part of the competition.</p>
+			<p>This was just a fun project where i wanted to design and build a quadcopter. All fo the cad work was done in Autodesk Iinventor with some wind tunnel testing on Autodesk Flow. THis project was not completed as I lacked the capability to manufacture some of the parts.</p>
 		</div>
 	</div>
 
@@ -47,18 +46,18 @@
 		<div class="container">
 		  <div class="row">
 		  	<div class="col-sm">
-		  		<h2>Design</h2>
-		  		<p>The car was modeled to have a larger body than  most F1 cars. It was a designed based on the Boxy Fish that had one of the  lowest drag coefficients in fish. As can be seen in Figure 6, the shape of the  body reduced the low pressure zone behind the f1 car. This low pressure was  also further reduced through a hole at eh bottom of the car. This can be  indicated by the green (reduced low pressure) marks in the wind tunnel result. <br>
-            	For more information Please <a href="http://velocitaracing.weebly.com/"> visit our website </a></p>
+		  		<h2>My Role</h2>
+		  		<p>THis was a persal project. I was responsible for the scope, designing, procuring and manufacturing of the quadcopeter. At the time manufacturing was a huge challenge so the project was not completed.</p>
 		  	</div>
 		  	<div class="col-sm">
-		  		<img src="image057.gif" width="100%">
+		  		<img width="100%" class="priority1 hiddenfalse" src="logo.jpg">
 		  	</div>
 		  </div>
 		</div>
 	</div>
 	<div name="" class="container" id="Reflection">
-		<iframe src="http://velocitaracing.weebly.com/" height="700px" width="100%"></iframe>
+		<h2>Reflection</h2>
+		<p>After designing and aquiring all of the parts, it was heartbreaking to find out that i would not be able to machine some of the marts given my limited number of tools. the project has since been abandoned but left me with an important lesson. Always design products based on the tooling immediately available.</p>
 	</div>
 	
 </body>
