--- a/Projects/SumoBot/index.html
+++ b/Projects/SumoBot/index.html
@@ -1,49 +1,89 @@
-<!doctype html>
+<!DOCTYPE html>
 <!--[if lt IE 7]> <html class="ie6 oldie"> <![endif]-->
 <!--[if IE 7]>    <html class="ie7 oldie"> <![endif]-->
 <!--[if IE 8]>    <html class="ie8 oldie"> <![endif]-->
 <!--[if gt IE 8]><!-->
 <html class="">
 <!--<![endif]-->
+
+<html>
 <head>
-<meta charset="utf-8">
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>McMaster Sumobot</title>
-<link href="../../SharedElements.css" rel="stylesheet" type="text/css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="Prakahr Garg's portfolio website">
+	<meta name="author" content="Prakhar Garg">
+	
+	<title>Prakhar Garg | SumoBot</title>
 
-<link href="../../../../../../Program Files (x86)/Adobe/Adobe Dreamweaver CS6/Configuration/BuiltIn/Fluid Grid Layout/boilerplate.css" rel="stylesheet" type="text/css">
-<link href="../projects.css" rel="stylesheet" type="text/css">
-<link href="../../SpryAssets/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="http://prakhargarg.me/NewSite/assets/data/sitemap.js"></script>
 
-<link href="../../HorizontalMenuBar/index.css" rel="stylesheet" type="text/css">
-<script src="../../HorizontalMenuBar/index.js"></script>
+
+	<!-- Building the site -->
+	<script src="http://prakhargarg.me/NewSite/HorizontalMenuBar/index.js"></script>
+	<script src="http://prakhargarg.me/NewSite/populate.js"></script>
+
+	<!-- Event Handlers -->
+
+	<!-- Styling -->
+	<link href="http://prakhargarg.me/NewSite/gridcontainer.css" rel="stylesheet" type="text/css">
+	<link href="http://prakhargarg.me/NewSite/bootstrap.css" rel="stylesheet" type="text/css">
+	<script src="http://prakhargarg.me/NewSite/bootstrap-4.5.0-dist/js/bootstrap.js"></script>
 
 </head>
-<body onload='addMenubar()'>
 
-<div class="Block" id="Strangers">
-  <h1>McMaster SumoBot </h1>
-
-    <div id="LayoutDiv1">
-		<div class="Image"><p><img src="Project SumoBot.jpg" width="100%"></p></div>
-        <div class="Paragraph">
-			<P>The <a href="https://www.facebook.com/McMasterSumoBot?fref=ts"> McMaster SumoBot </a> group was founded by Vinay Yuvashankar as an effort to help the Mechatronics Engineering students at McMaster to gain more practical experience in the field. Over the past two years I have competed in and  helped organise the event. The event helped me learn a lot about how a club at McMaster operates. I got first had experience in filing out the necessary paperwork and creating proper documentation to ensure that others can perform my duties once I have graduated.</P>
+<body onload=' addMenubar();'>
+	<div name="" class="container-fluid jumbotron" id="Intro">
+		<h1 id="jobtitle">McMaster SumoBot</h1>
+		<p class="lead float-right" id="date">2013-2015</p>
+		<p class="lead" id="company">McMaster University</p>
+		<div class="container">
+	    	<h2>Project Description</h2>
+			<p>The McMaster SumoBot group was founded by Vinay Yuvashankar as an effort to help the Mechatronics Engineering students at McMaster to gain more practical experience in the field. Over the past two years I have competed in and helped organise the event. The event helped me learn a lot about how a club at McMaster operates. I got first had experience in filing out the necessary paperwork and creating proper documentation to ensure that others can perform my duties once I have graduated.</p>
 		</div>
 	</div>
 
-
-    
-  <div id="LayoutDiv2">
-    <div id="NudgeMe" class="Image"><p><img src="20141107_064416.jpg"></p>
-    </div>
-    <div class="Paragraph">
-      <P>I was the Vice Presidents of Parts in the club. I was responsible for creating an economic kit of parts for each team that competed. I had to stay in regular communication with the Vice President of Finance and the President of the club to ensure that the parts being ordered were within the clubs budget. While performing my duties I learned about the many hardware and electronics distributors in the Greater Toronto and Hamilton Area. My primary focus at the club was to ensure that all the teams received quality parts sufficient to build an average robot.
-	  </p></div>
-  </div>
-</div>
-<script type="text/javascript">
-var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {imgDown:"SpryAssets/SpryMenuBarDownHover.gif", imgRight:"SpryAssets/SpryMenuBarRightHover.gif"});
-</script>
+	<div name="" class="container-fluid " id="Details">
+		<div class="container">
+		  <div class="row">
+		  	<div class="col-sm">
+		  		<h2>My Role</h2>
+		  		<p>I was the Vice Presidents of Parts in the club. I was responsible for creating an economic kit of parts for each team that competed. I had to stay in regular communication with the Vice President of Finance and the President of the club to ensure that the parts being ordered were within the clubs budget. While performing my duties I learned about the many hardware and electronics distributors in the Greater Toronto and Hamilton Area. My primary focus at the club was to ensure that all the teams received quality parts sufficient to build an average robot.</p>
+		  	</div>
+		  	<div class="col-sm">
+		  		<img width="100%" class="priority1 hiddenfalse" src="Project SumoBot.jpg">
+		  	</div>
+		  </div>
+		  <div class="row">
+		    <div class="col-sm">
+				<img width="100%" class="priority1 hiddenfalse" src="20141107_064416.jpg">
+		    </div>
+		    <div class="col-sm">
+		    	<div id="ksa">
+					<h2>Knowledge, Skills and Abillities</h2>
+					<ul>
+						<li>Knowledge of local hardware vendors</li>
+						<li>Understanding of standard parts to build a robot</li>
+						<li>Teamwork</li>
+						<li>Leadership</li>
+					</ul>
+				</div>
+				<div id="gsf">
+					<h2>Goals, Success Factors</h2>
+					<ul>
+						<li>Have every team succesfully build a robot</li>
+						<li>Maintain a fair level of competition</li>
+					</ul>
+				</div>
+		    </div>
+		  </div>
+		</div>
+	</div>
+	<div name="" class="container" id="Reflection">
+		<h2>Reflection</h2>
+		<p>It was awesome to work with a great group of execs to organize this project. It taught me a lot about organising formal events at the university. I had a lot fo fun during this and made many long lasting friends.</p>
+	</div>
+	
 </body>
+
 </html>
